# rshogi

./: .gitignore  CHANGELOG.md  README.md  csa_client_example.toml
.claude/skills/edition-build/: SKILL.md
.claude/skills/selfplay/: SKILL.md
.claude/skills/usi-perf-measure/: SKILL.md
.claude/skills/verify-nnue/: SKILL.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  cloudflare-drift-check.yml  deploy-workers.yml  pulumi-preview.yml  rust-ci.yml  secret-sync.yml  synthetic-csa-production.yml  synthetic-csa-staging.yml  workers-smoke.yml
crates/rshogi-core/: Cargo.toml  build.rs
crates/rshogi-core/src/nnue/: accumulator.rs  accumulator_layer_stacks.rs  accumulator_stack_variant.rs  activation.rs  aliases.rs  bona_piece.rs  bona_piece_halfka_hm_merged.rs  bona_piece_halfka_hm_split.rs  bona_piece_halfka_merged.rs  bona_piece_halfka_split.rs  constants.rs  evaluator.rs  feature_transformer_layer_stacks.rs  layer_stacks.rs  layers.rs  ls_feature_spec.rs  macros.rs  mod.rs  network.rs  network_halfka.rs  network_halfka_hm.rs  network_halfka_hm_merged.rs  network_halfka_hm_split.rs  network_halfka_merged.rs  network_halfka_split.rs  network_halfkp.rs  network_layer_stacks.rs  prelude.rs  spec.rs  threat_exclusion.rs  threat_features.rs
crates/rshogi-core/src/nnue/features/: half_ka_hm_merged.rs  half_ka_hm_split.rs  half_ka_merged.rs  half_ka_split.rs  half_kp.rs  mod.rs
crates/rshogi-core/src/nnue/halfka/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/nnue/halfka_hm/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/nnue/halfka_hm_merged/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/nnue/halfka_hm_split/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/nnue/halfka_merged/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/nnue/halfka_split/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/nnue/halfkp/: l1024.rs  l256.rs  l512.rs  l768.rs  mod.rs
crates/rshogi-core/src/position/: pos.rs  sfen.rs
crates/rshogi-core/src/search/: alpha_beta.rs  limits.rs  search_helpers.rs
crates/rshogi-core/tests/: build_rs_checks.rs
crates/rshogi-csa-client/: Cargo.toml
crates/rshogi-csa-client/examples/: README.md  csa_client.toml.example
crates/rshogi-csa-client/src/: config.rs  engine.rs  lib.rs  main.rs  protocol.rs
crates/rshogi-csa-client/tests/: engine_stderr_diagnostic.rs  rate_limit_retry_after.rs  session_events_integration.rs
crates/rshogi-csa-server-workers/: wrangler.production.toml  wrangler.staging.toml  wrangler.toml.example
crates/rshogi-csa-server-workers/src/: admin_auth.rs  backfill.rs  config.rs  export_retry.rs  floodgate_history.rs  game_room.rs  games_index.rs  handle_auth.rs  lib.rs  live_games_index.rs  lobby.rs  lobby_protocol.rs  observability.rs  persistence.rs  rate_limit.rs  reconnect.rs  router.rs  spectator_snapshot.rs  viewer_api.rs  x1_paths.rs
crates/rshogi-csa-server-workers/tests/: wrangler_environment_toml_consistency.rs  wrangler_template_consistency.rs
crates/rshogi-csa-server-workers/tests/miniflare_smoke/: harness.ts  lobby.test.ts  origin_route.test.ts  rate_limit.test.ts
crates/rshogi-csa-server/src/game/: clock.rs  room.rs  validator.rs
crates/rshogi-csa-server/src/matching/: challenge.rs
crates/rshogi-csa-server/src/protocol/: summary.rs
crates/rshogi-csa-server/src/record/: kifu.rs
crates/rshogi-csa-server/src/storage/: file.rs  players_yaml.rs
crates/rshogi-csa-server/src/storage/floodgate_history/: jsonl.rs
crates/rshogi-csa-server/tests/: license_integrity.rs
crates/rshogi-usi/: Cargo.toml
crates/rshogi-usi/src/: main.rs
crates/tools/: Cargo.toml  README.md
crates/tools/docs/: floodgate_pipeline.md  gensfen.md  label_bench_dl.md  label_bench_positions.md  pack_tools.md  psv_to_hcpe3.md  rescore_psv.md  tools-reference.md  tournament.md
crates/tools/src/: bench_nnue_eval_tool.rs  eval_sfens_tool.rs  lib.rs  onnx_value.rs  packed_sfen.rs  qsearch_pv.rs  verify_nnue_accumulator_tool.rs
crates/tools/src/common/: floodgate.rs
crates/tools/src/selfplay/: game.rs
crates/tools/tests/: psv_to_hcpe3_integration.rs
crates/tools/tests/fixtures/: psv_to_hcpe3_sample.hcpe  psv_to_hcpe3_sample.hcpe3  psv_to_hcpe3_sample.psv  psv_to_hcpe3_yaneuraou_sample.hcpe  psv_to_hcpe3_yaneuraou_sample.hcpe3  psv_to_hcpe3_yaneuraou_sample.psv
crates/xtask/src/: main.rs
docs/: build.md  csa-client.md  nnue-architecture-detection.md  nnue-supported-architectures.md  server-layerstacks-build.md
docs/csa-server/: README.md  admin_auth.md  deployment.md  iac.md  observability.md  protocol-reference.md  rate_limit.md  rate_limit_design.md  tcp-server.md  viewer_access_control.md
docs/decisions/: 2026-05-20-simple-quantised-format-engine-consumer.md  2026-05-24-build-edition-flavor-design.md  2026-05-26-variable-num-buckets-layerstack-load.md
docs/experiments/: README.md
docs/performance/: nps_rshogi_vs_yo_20260519.md
engines/: README.md
infra/pulumi/: .gitignore  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  index.ts  package.json  pnpm-lock.yaml
