[package]
name = "rshogi-core"
version = "0.2.4"
edition = "2024"
authors = ["SH11235"]
description = "A high-performance shogi engine core library with NNUE evaluation"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "japanese-chess", "game", "engine", "nnue"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
log.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Keep in sync with clap's transitive windows-sys (0.60.x) to avoid duplicate versions on Windows.
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

# getrandom for WebAssembly support (required by rand)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
# Rayon for parallel search in Wasm (enabled via wasm-threads feature)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test dependencies

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = "1"

[features]
# 探索経路では pass_rights / PASS NMP を無効化
# Web/WASM で pass ルールを使う場合は default-features=false で無効化する。
default = ["search-no-pass-rules", "layerstacks-1536x16x32"]
# デバッグ機能
debug = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = []
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = []
# SIMD最適化（AVX2）
simd_avx2 = []
# 診断ログ
diagnostics = []
# WebAssembly スレッドビルド用フラグ
# wasm-bindgen-rayon + rayon を使用した LazySMP 並列探索を有効化
# 詳細は docs/wasm-multithreading-investigation.md を参照。
wasm-threads = ["rayon"]
# アプリ向け指し手特徴量抽出（解説生成等で使用）
move-features = []
# TT trace / helper TT write 制御（並列探索デバッグ用）
# 有効時は環境変数で制御: RSHOGI_DEBUG_TT_TRACE, RSHOGI_DEBUG_TT_SANITY,
# RSHOGI_DISABLE_HELPER_TT_WRITE, RSHOGI_TT_TRACE_ROOT_MOVE 等
tt-trace = []
# TT hit時の非PVノードで TT eval を再利用する（USE_LAZY_EVALUATE相当）
# 無効時は YO 現行ビルド整合のため常に NNUE 再評価する
use-lazy-evaluate = []
# YaneuraOu DEEP相当のデフォルト遅延設定を使う
# GPU/ネットワーク待ちが長い環境向けの遅延マージン(400/1400ms)プリセットを有効化する
deep = []
# 探索経路限定で pass_rights を無効化（Position/MoveGen の pass 機能は保持）
search-no-pass-rules = []
# LayerStack 専用ビルド（大会向け production 用）
# HalfKP/HalfKaSplit/HalfKaHmMerged のコードを除去し、evaluate_dispatch の icache footprint を削減
layerstack-only = []
# LayerStacks 1536x16x32 バリアント（従来アーキテクチャ）
layerstacks-1536x16x32 = []
# LayerStacks 1536x32x32 バリアント
layerstacks-1536x32x32 = []
# LayerStacks 768x16x32 バリアント
layerstacks-768x16x32 = []
# LayerStacks 512x16x32 バリアント
layerstacks-512x16x32 = []
# NNUE PSQT ショートカット対応
# 無効時: AccumulatorLayerStacks から psqt_accumulation を除去、PSQT モデル読み込み不可
nnue-psqt = []
# NNUE Threat 特徴量対応
# 無効時: AccumulatorLayerStacks から threat_accumulation を除去 (-6KB/entry)、Threat モデル読み込み不可
nnue-threat = []
# Threat exclusion profiles (mutually exclusive)
# 除外 pair で Threat 次元を削減し、NPS を改善する。
# 詳細は crates/rshogi-core/src/nnue/threat_exclusion.rs の module doc 参照。
threat-profile-same-class = []               # profile 1: 同種ペア全除外
threat-profile-same-class-major-pawn = []   # profile 2: 同種 + 大駒→歩除外
# NNUE progress8kpabs バケットの差分更新最適化
# - 有効時: StackEntry に progress_sum/computed_progress フィールド追加、
#   ensure_progress_bucket で DirtyPiece 差分から O(1) 更新
# - Threat なし環境: +3〜4% NPS（有効）
# - Threat あり環境: -2% NPS（cache 圧迫で退行）
# default では無効。運用モデルの特性に応じてビルド時に明示指定する。
nnue-progress-diff = []

[lib]
name = "rshogi_core"
path = "src/lib.rs"

# PSQT 統計ダンプツール
# `NetworkLayerStacks1536x16x32` のロードを行うため、`nnue-psqt` に加えて
# `layerstacks-1536x16x32` が同時に有効な構成でのみビルドする。
# （未対応構成では `cargo build --bin dump_psqt_stats` が
#   "requires the features: nnue-psqt, layerstacks-1536x16x32" で明示的に失敗する）
[[bin]]
name = "dump_psqt_stats"
path = "src/bin/dump_psqt_stats.rs"
required-features = ["nnue-psqt", "layerstacks-1536x16x32"]
