[package]
name = "rshogi-core"
version = "0.4.0"
edition = "2024"
authors = ["SH11235"]
description = "A high-performance shogi engine core library with NNUE evaluation"
license = "GPL-3.0-or-later"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "japanese-chess", "game", "engine", "nnue"]
categories = ["games", "game-engines"]
readme = "README.md"
build = "build.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
log.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Keep in sync with clap's transitive windows-sys (0.60.x) to avoid duplicate versions on Windows.
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

# getrandom for WebAssembly support (required by rand)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
# Rayon for parallel search in Wasm (enabled via wasm-threads feature)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test dependencies

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = "1"

[features]
# default は universal edition (HalfKX 全 variant + LS 全 size + 全 ext を dispatch)。
# 探索経路では pass_rights / PASS NMP を無効化。
# Web/WASM で pass ルールを使う場合は default-features=false で個別指定する。
default = ["search-no-pass-rules", "edition-universal"]

# === 開発・診断・横断系 (Edition 軸非対象) ===
debug = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = []
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = []
# SIMD最適化（AVX2）
simd_avx2 = []
diagnostics = []
# WebAssembly スレッドビルド (wasm-bindgen-rayon + rayon で LazySMP)。
# 詳細は docs/wasm-multithreading-investigation.md を参照。
wasm-threads = ["rayon"]
# アプリ向け指し手特徴量抽出（解説生成等で使用）
move-features = []
# TT trace / helper TT write 制御（並列探索デバッグ用）。
# 有効時は環境変数で制御: RSHOGI_DEBUG_TT_TRACE, RSHOGI_DEBUG_TT_SANITY,
# RSHOGI_DISABLE_HELPER_TT_WRITE, RSHOGI_TT_TRACE_ROOT_MOVE 等。
tt-trace = []
# TT hit時の非PVノードで TT eval を再利用する（USE_LAZY_EVALUATE相当）。
# 無効時は YO 現行ビルド整合のため常に NNUE 再評価する。
use-lazy-evaluate = []
# YaneuraOu DEEP相当のデフォルト遅延設定 (GPU/ネットワーク待ち向け遅延マージン 400/1400ms)。
deep = []
# 探索経路限定で pass_rights を無効化（Position/MoveGen の pass 機能は保持）。
search-no-pass-rules = []
# Threat exclusion profiles (mutually exclusive)。除外 pair で Threat 次元を削減し NPS を改善。
# 詳細は crates/rshogi-core/src/nnue/threat_exclusion.rs の module doc 参照。
threat-profile-same-class = []               # profile 1: 同種ペア全除外
threat-profile-same-class-major-pawn = []   # profile 2: 同種 + 大駒→歩除外
threat-profile-cross-side = []               # profile 10: 同 side / 同種を除外、敵味方跨ぎ異種のみ

# === Edition 軸 atomic feature 群 ===
# 設計は docs/decisions/2026-05-24-build-edition-flavor-design.md を参照。
# atomic feature は実装詳細扱いで、user は基本的に preset edition (後述 `edition-*`)
# 経由で触る想定。

# Architecture 経路 slot (include-only 意味論)。
# - layerstack-arch:     LayerStack network 経路を含める
# - halfkx-arch: HalfKX family (HalfKP / HalfKa*) 経路を含める
# 両者を同時に立てることも可 (= universal dispatch build)。
layerstack-arch     = []
halfkx-arch = []

# LayerStack network L1 サイズ slot
layerstacks-1536x16x32 = []
layerstacks-1536x32x32 = []
layerstacks-768x16x32  = []
layerstacks-768x8x32   = []
layerstacks-512x16x32  = []
layerstacks-1024x16x32 = []

# LayerStack 拡張 slot (psqt / threat)
# - nnue-psqt:   AccumulatorLayerStacks に psqt_accumulation を含める。PSQT モデル読み込み可。
# - nnue-threat: AccumulatorLayerStacks に threat_accumulation を含める (+6KB/entry)。Threat モデル読み込み可。
nnue-psqt   = []
nnue-threat = []

# FT (Feature Transformer) 種別 slot (5 variant)。
# LS / HalfKX どちらの family でも 5 variant 全対応。mode-specific では 1 個固定、
# family / universal では複数 OR を許容して runtime dispatch。
ft-halfkp           = []
ft-halfka_split     = []
ft-halfka_merged    = []
ft-halfka_hm_split  = []
ft-halfka_hm_merged = []

# HalfKX activation slot
halfkx-activation-crelu    = []
halfkx-activation-screlu   = []
halfkx-activation-pairwise = []

# Build mode sentinel (preset edition がセット、build.rs 整合性チェック用)。
# user が直接指定するものではなく、preset edition 経由でのみ有効化される想定。
# - mode-universal: 全 architecture × 構成 dispatch、check 緩和
# - mode-family:    family dispatch、check 部分緩和
# - mode-specific:  単一構成 build、check 厳格 (size/activation/ft 1 個固定)
mode-universal = []
mode-family    = []
mode-specific  = []

# NNUE progress8kpabs バケットの差分更新最適化
# - 有効時: StackEntry に progress_sum/computed_progress フィールド追加、
#   ensure_progress_bucket で DirtyPiece 差分から O(1) 更新
# - L0=1536 系で性能向上、L0=768/512 で退行する trade-off
# - 適用条件: build.rs で mode-specific + layerstacks-1536x16x32 / layerstacks-1536x32x32 を強制
#   (mode-* が未指定の互換 build では check 緩和、user 責任で組合せ可)
nnue-progress-diff = []

# === preset edition (user-facing canonical API) ===
# 命名規則・slot 意味論は ADR `docs/decisions/2026-05-24-build-edition-flavor-design.md`
# 参照。各 preset は mode sentinel + 必要な atomic feature 群を bundle する。
# 主要な build target をここで整備し、残りは需要に応じて追加する。

# 全 architecture × 全構成 dispatch (default)
edition-universal = [
  "mode-universal",
  "layerstack-arch", "halfkx-arch",
  "ft-halfkp", "ft-halfka_split", "ft-halfka_merged", "ft-halfka_hm_split", "ft-halfka_hm_merged",
  "layerstacks-1536x16x32", "layerstacks-1536x32x32", "layerstacks-768x16x32", "layerstacks-768x8x32", "layerstacks-512x16x32", "layerstacks-1024x16x32",
  "nnue-psqt", "nnue-threat",
  "halfkx-activation-crelu", "halfkx-activation-screlu", "halfkx-activation-pairwise",
]

# HalfKX family (全 FT / activation dispatch)。
edition-halfkx     = ["edition-halfkx-any"]
edition-halfkx-any = [
  "mode-family", "halfkx-arch",
  "ft-halfkp", "ft-halfka_split", "ft-halfka_merged", "ft-halfka_hm_split", "ft-halfka_hm_merged",
  "halfkx-activation-crelu", "halfkx-activation-screlu", "halfkx-activation-pairwise",
]

# LayerStack family (全 size / 全 FT / 全 ext dispatch)。
edition-layerstacks             = ["edition-layerstacks-any-any-any"]
edition-layerstacks-any-any-any = [
  "mode-family", "layerstack-arch",
  "ft-halfkp", "ft-halfka_split", "ft-halfka_merged", "ft-halfka_hm_split", "ft-halfka_hm_merged",
  "layerstacks-1536x16x32", "layerstacks-1536x32x32", "layerstacks-768x16x32", "layerstacks-768x8x32", "layerstacks-512x16x32", "layerstacks-1024x16x32",
  "nnue-psqt", "nnue-threat",
]

# HalfKP specific (suisho5 等)。
# `AccumulatorStackVariant::LayerStacks` / `NNUENetwork::LayerStacks` の enum variant
# と LS 実行時 state (acc_cache field) は `layerstack-arch` で cfg gate されるため、HalfKX
# specific edition には含めない。`LayerStacksAccCache` 型と `evaluate_dispatch` の
# シグネチャは public API 互換のため非 layerstack-arch build にも残るが、HalfKX-only run では
# `Option<LayerStacksAccCache>` は常に `None` を取る。
edition-halfkp-crelu = [
  "mode-specific", "halfkx-arch",
  "ft-halfkp", "halfkx-activation-crelu",
]

# HalfKaHmMerged HalfKX specific。
edition-halfka_hm_merged-screlu = [
  "mode-specific", "halfkx-arch",
  "ft-halfka_hm_merged", "halfkx-activation-screlu",
]

# LayerStack specific (1536x16x32、全 ext 組合せ)。L0=1536 系は progress-diff 同梱。
edition-layerstacks-halfka_hm_merged-1536x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-1536x16x32",
  "nnue-progress-diff",
]
edition-layerstacks-halfka_hm_merged-1536x16x32-psqt = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-1536x16x32", "nnue-psqt",
  "nnue-progress-diff",
]
edition-layerstacks-halfka_hm_merged-1536x16x32-threat = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-1536x16x32", "nnue-threat",
  "nnue-progress-diff",
]
edition-layerstacks-halfka_hm_merged-1536x16x32-psqt_threat = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-1536x16x32",
  "nnue-psqt", "nnue-threat",
  "nnue-progress-diff",
]

# LayerStack specific (1536x32x32、none 1 構成のみ最初に整備)。L0=1536 系。
edition-layerstacks-halfka_hm_merged-1536x32x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-1536x32x32",
  "nnue-progress-diff",
]

# LayerStack specific (1024x16x32 / 768x16x32 / 768x8x32 / 512x16x32、none のみ)。L0≠1536 系は progress-diff 不可。
edition-layerstacks-halfka_hm_merged-1024x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-1024x16x32",
]
edition-layerstacks-halfka_hm_merged-768x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-768x16x32",
]
edition-layerstacks-halfka_hm_merged-768x8x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-768x8x32",
]
edition-layerstacks-halfka_hm_merged-512x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_merged", "layerstacks-512x16x32",
]

# LS specific preset (halfka_hm_merged 以外の 4 FT、1536x16x32-none で代表整備)。
# 残りの (size × ext) 組合せは需要発生時に同パターンで追加する。
edition-layerstacks-halfka_hm_split-1536x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_hm_split", "layerstacks-1536x16x32",
  "nnue-progress-diff",
]
edition-layerstacks-halfka_merged-1536x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_merged", "layerstacks-1536x16x32",
  "nnue-progress-diff",
]
edition-layerstacks-halfka_split-1536x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfka_split", "layerstacks-1536x16x32",
  "nnue-progress-diff",
]
edition-layerstacks-halfkp-1536x16x32-none = [
  "mode-specific", "layerstack-arch", "ft-halfkp", "layerstacks-1536x16x32",
  "nnue-progress-diff",
]

[lib]
name = "rshogi_core"
path = "src/lib.rs"

# PSQT 統計ダンプツール。
# `NetworkLayerStacks1536x16x32` のロードに `nnue-psqt` と `layerstacks-1536x16x32`
# の両方が必要なため、`required-features` で明示する。
[[bin]]
name = "dump_psqt_stats"
path = "src/bin/dump_psqt_stats.rs"
required-features = ["nnue-psqt", "layerstacks-1536x16x32"]
