[package]
name = "rshogi-usi"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "USI protocol implementation for rshogi engine"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "usi", "japanese-chess", "engine", "protocol"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true

# Local dependencies
rshogi-core = { version = "0.2", path = "../rshogi-core" }

[features]
default = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = ["rshogi-core/search-stats"]
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = ["rshogi-core/nnue-stats"]
# TT書き込みトレースおよびhelper bound/depthフィルタ
tt-trace = ["rshogi-core/tt-trace"]
# NNUE 詳細診断ログ（Golden Forward テスト用）
diagnostics = ["rshogi-core/diagnostics"]
# Threat exclusion profiles
threat-profile-same-class = ["rshogi-core/threat-profile-same-class"]
threat-profile-same-class-major-pawn = ["rshogi-core/threat-profile-same-class-major-pawn"]
# NNUE progress8kpabs 差分更新最適化（L1=1536 で有効、L1=768 で退行）
nnue-progress-diff = ["rshogi-core/nnue-progress-diff"]

# === Edition 軸 atomic feature 群 ===
# 設計は docs/decisions/2026-05-24-build-edition-flavor-design.md を参照。
# Architecture 経路
ls-arch     = ["rshogi-core/ls-arch"]
halfkx-arch = ["rshogi-core/halfkx-arch"]
# LS L1 サイズ slot
ls-size-1536x16x32 = ["rshogi-core/ls-size-1536x16x32"]
ls-size-1536x32x32 = ["rshogi-core/ls-size-1536x32x32"]
ls-size-768x16x32  = ["rshogi-core/ls-size-768x16x32"]
ls-size-512x16x32  = ["rshogi-core/ls-size-512x16x32"]
# LS 拡張 slot
ls-ext-psqt   = ["rshogi-core/ls-ext-psqt"]
ls-ext-threat = ["rshogi-core/ls-ext-threat"]
# FT 種別 slot
ft-halfkp           = ["rshogi-core/ft-halfkp"]
ft-halfka_split     = ["rshogi-core/ft-halfka_split"]
ft-halfka_merged    = ["rshogi-core/ft-halfka_merged"]
ft-halfka_hm_split  = ["rshogi-core/ft-halfka_hm_split"]
ft-halfka_hm_merged = ["rshogi-core/ft-halfka_hm_merged"]
# HalfKX activation slot
halfkx-activation-crelu    = ["rshogi-core/halfkx-activation-crelu"]
halfkx-activation-screlu   = ["rshogi-core/halfkx-activation-screlu"]
halfkx-activation-pairwise = ["rshogi-core/halfkx-activation-pairwise"]
# Build mode sentinel (preset edition がセット、build.rs 整合性チェック用)
mode-universal = ["rshogi-core/mode-universal"]
mode-family    = ["rshogi-core/mode-family"]
mode-specific  = ["rshogi-core/mode-specific"]

# === 旧 feature 名 alias ===
# 旧 build スクリプト・CI 設定がそのまま動くよう alias で互換維持する。
layerstack-only        = ["ls-arch"]
nnue-psqt              = ["ls-ext-psqt"]
nnue-threat            = ["ls-ext-threat"]
layerstacks-1536x16x32 = ["ls-size-1536x16x32"]
layerstacks-1536x32x32 = ["ls-size-1536x32x32"]
layerstacks-768x16x32  = ["ls-size-768x16x32"]
layerstacks-512x16x32  = ["ls-size-512x16x32"]

[[bin]]
name = "rshogi-usi"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3"
