[package]
name = "rshogi-usi"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "USI protocol implementation for rshogi engine"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "usi", "japanese-chess", "engine", "protocol"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true

# Local dependencies
# rshogi-core の default features は本 crate の default で明示的に再構築する
# (preset edition specific build 時に複数 edition が unify されるのを防ぐため)。
rshogi-core = { version = "0.2", path = "../rshogi-core", default-features = false }

[features]
# default は rshogi-core 側 default (search-no-pass-rules + edition-universal) と一致させる。
default = ["search-no-pass-rules", "edition-universal"]
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = ["rshogi-core/search-stats"]
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = ["rshogi-core/nnue-stats"]
# TT書き込みトレースおよびhelper bound/depthフィルタ
tt-trace = ["rshogi-core/tt-trace"]
# NNUE 詳細診断ログ（Golden Forward テスト用）
diagnostics = ["rshogi-core/diagnostics"]
# Threat exclusion profiles
threat-profile-same-class = ["rshogi-core/threat-profile-same-class"]
threat-profile-same-class-major-pawn = ["rshogi-core/threat-profile-same-class-major-pawn"]
# NNUE progress8kpabs 差分更新最適化（L1=1536 で有効、L1=768 で退行）
nnue-progress-diff = ["rshogi-core/nnue-progress-diff"]
# 探索経路限定で pass_rights を無効化
search-no-pass-rules = ["rshogi-core/search-no-pass-rules"]

# === Edition 軸 atomic feature 群 ===
# 設計は docs/decisions/2026-05-24-build-edition-flavor-design.md を参照。
# Architecture 経路
ls-arch     = ["rshogi-core/ls-arch"]
halfkx-arch = ["rshogi-core/halfkx-arch"]
# LS L1 サイズ slot
ls-size-1536x16x32 = ["rshogi-core/ls-size-1536x16x32"]
ls-size-1536x32x32 = ["rshogi-core/ls-size-1536x32x32"]
ls-size-768x16x32  = ["rshogi-core/ls-size-768x16x32"]
ls-size-512x16x32  = ["rshogi-core/ls-size-512x16x32"]
# LS 拡張 slot
ls-ext-psqt   = ["rshogi-core/ls-ext-psqt"]
ls-ext-threat = ["rshogi-core/ls-ext-threat"]
# FT 種別 slot
ft-halfkp           = ["rshogi-core/ft-halfkp"]
ft-halfka_split     = ["rshogi-core/ft-halfka_split"]
ft-halfka_merged    = ["rshogi-core/ft-halfka_merged"]
ft-halfka_hm_split  = ["rshogi-core/ft-halfka_hm_split"]
ft-halfka_hm_merged = ["rshogi-core/ft-halfka_hm_merged"]
# HalfKX activation slot
halfkx-activation-crelu    = ["rshogi-core/halfkx-activation-crelu"]
halfkx-activation-screlu   = ["rshogi-core/halfkx-activation-screlu"]
halfkx-activation-pairwise = ["rshogi-core/halfkx-activation-pairwise"]
# Build mode sentinel (preset edition がセット、build.rs 整合性チェック用)
mode-universal = ["rshogi-core/mode-universal"]
mode-family    = ["rshogi-core/mode-family"]
mode-specific  = ["rshogi-core/mode-specific"]

# === preset edition (user-facing canonical API) ===
# 各 preset は rshogi-core 側の同名 preset へ forward する。
edition-universal = ["rshogi-core/edition-universal"]
edition-halfkx     = ["rshogi-core/edition-halfkx"]
edition-halfkx-any = ["rshogi-core/edition-halfkx-any"]
edition-ls             = ["rshogi-core/edition-ls"]
edition-ls-any-any-any = ["rshogi-core/edition-ls-any-any-any"]
edition-halfkp-crelu             = ["rshogi-core/edition-halfkp-crelu"]
edition-halfka_hm_merged-screlu  = ["rshogi-core/edition-halfka_hm_merged-screlu"]
edition-ls-halfka_hm_merged-1536x16x32-none        = ["rshogi-core/edition-ls-halfka_hm_merged-1536x16x32-none"]
edition-ls-halfka_hm_merged-1536x16x32-psqt        = ["rshogi-core/edition-ls-halfka_hm_merged-1536x16x32-psqt"]
edition-ls-halfka_hm_merged-1536x16x32-threat      = ["rshogi-core/edition-ls-halfka_hm_merged-1536x16x32-threat"]
edition-ls-halfka_hm_merged-1536x16x32-psqt_threat = ["rshogi-core/edition-ls-halfka_hm_merged-1536x16x32-psqt_threat"]
edition-ls-halfka_hm_merged-1536x32x32-none        = ["rshogi-core/edition-ls-halfka_hm_merged-1536x32x32-none"]
edition-ls-halfka_hm_merged-768x16x32-none         = ["rshogi-core/edition-ls-halfka_hm_merged-768x16x32-none"]
edition-ls-halfka_hm_merged-512x16x32-none         = ["rshogi-core/edition-ls-halfka_hm_merged-512x16x32-none"]

# === 旧 feature 名 alias ===
# 旧 build スクリプト・CI 設定がそのまま動くよう alias で互換維持する。
layerstack-only        = ["ls-arch"]
nnue-psqt              = ["ls-ext-psqt"]
nnue-threat            = ["ls-ext-threat"]
layerstacks-1536x16x32 = ["ls-size-1536x16x32"]
layerstacks-1536x32x32 = ["ls-size-1536x32x32"]
layerstacks-768x16x32  = ["ls-size-768x16x32"]
layerstacks-512x16x32  = ["ls-size-512x16x32"]

[[bin]]
name = "rshogi-usi"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3"
