[package]
name = "tools"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "Performance benchmarking and analysis tools for shogi engine"
license = "GPL-3.0-or-later"
repository = "https://github.com/SH11235/rshogi"

[features]
default = [
    "layerstacks-1536x16x32",
    "ft-halfkp",
    "ft-halfka_split",
    "ft-halfka_merged",
    "ft-halfka_hm_split",
    "ft-halfka_hm_merged",
]
# 診断ログ（EvalHashヒット率など）
diagnostics = ["rshogi-core/diagnostics"]
# Threat exclusion profiles
threat-profile-same-class = ["rshogi-core/threat-profile-same-class"]
threat-profile-same-class-major-pawn = ["rshogi-core/threat-profile-same-class-major-pawn"]

# === Edition 軸 atomic feature 群 (本 crate で必要なものだけ forward) ===
# 設計は docs/decisions/2026-05-24-build-edition-flavor-design.md を参照。
# tools は LS network 上の解析ユーティリティ前提なので architecture 経路 (ls-arch /
# halfkx-arch) や FT slot は forward しない。必要になったら追加する。
# LS L1 サイズ slot
ls-size-1536x16x32 = ["rshogi-core/ls-size-1536x16x32"]
ls-size-1536x32x32 = ["rshogi-core/ls-size-1536x32x32"]
ls-size-768x16x32  = ["rshogi-core/ls-size-768x16x32"]
ls-size-768x8x32   = ["rshogi-core/ls-size-768x8x32"]
ls-size-512x16x32  = ["rshogi-core/ls-size-512x16x32"]
# LS 拡張 slot
ls-ext-psqt   = ["rshogi-core/ls-ext-psqt"]
ls-ext-threat = ["rshogi-core/ls-ext-threat"]
# FT slot (LS の Feature Transformer 軸、5 variants)
ft-halfkp           = ["rshogi-core/ft-halfkp"]
ft-halfka_split     = ["rshogi-core/ft-halfka_split"]
ft-halfka_merged    = ["rshogi-core/ft-halfka_merged"]
ft-halfka_hm_split  = ["rshogi-core/ft-halfka_hm_split"]
ft-halfka_hm_merged = ["rshogi-core/ft-halfka_hm_merged"]

# === 旧 feature 名 alias ===
nnue-psqt              = ["ls-ext-psqt"]
nnue-threat            = ["ls-ext-threat"]
layerstacks-1536x16x32 = ["ls-size-1536x16x32"]
layerstacks-1536x32x32 = ["ls-size-1536x32x32"]
layerstacks-768x16x32  = ["ls-size-768x16x32"]
layerstacks-768x8x32   = ["ls-size-768x8x32"]
layerstacks-512x16x32  = ["ls-size-512x16x32"]
# AobaZero ONNX直接推論（ONNX Runtime + CUDA が必要）
aobazero-onnx = ["dep:ort", "dep:ndarray"]
# 標準dlshogi ONNX直接推論（DL水匠等、ONNX Runtime + CUDA が必要）
dlshogi-onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
flate2.workspace = true
env_logger.workspace = true
log.workspace = true

# Local dependencies
rshogi-core = { path = "../rshogi-core" }
rshogi-csa = { path = "../rshogi-csa" }

# Additional dependencies
sysinfo = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
walkdir = "2.5"
url = "2.5"
rayon = "1.10"
crossbeam-channel = "0.5"
ctrlc = "3.4"
libc = "0.2"
indicatif = "0.18"
rand = "0.9.3"
rand_chacha = "0.9"
byteorder = "1.5"
tempfile = "3.20"
glob = "0.3"
regex.workspace = true
toml.workspace = true
sha2 = "0.10"

# AobaZero ONNX direct inference (optional, behind "aobazero-onnx" feature)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["load-dynamic", "api-24"] }
ndarray = { version = "0.16", optional = true }
